--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.32.2",
-    "fractional": "^1.0.0",
+    "fracty": "^1.0.9",
     "parcel": "^2.9.3",
     "regenerator-runtime": "^0.14.0"
   },
